[package]
name = "equitx-landscape"
description = "Keeps track of all EquitX contracts and allows deploying new ones"
version = "0.0.0"
authors = ["Aha Labs <help@ahalabs.dev>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
loam-subcontract-core = { workspace = true }


[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }

[package.metadata.loam]
contract = true
